c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_incomplete_structs/cast_incomplete_struct.c
struct s;

extern struct s v;

int main(void) {
  // you can't perform a cast on a struct with incomplete type
  (void)v;
  return 0;
}